# 3y3s

./: .gitignore  plugin
cfg/: README.md  pubspec.yaml
cfg/lib/: main.dart  state.dart  util.dart
cfg/lib/cv/: vision.dart
cfg/lib/model/: plugin.dart
cfg/lib/widget/: cfg_screen.dart
cfg/lib/widget/tab/: home.dart  input.dart  optimizations.dart  searcharea.dart  templates.dart  test.dart
cfg/linux/: CMakeLists.txt
cfg/linux/runner/: my_application.cc
cfg/test/: widget_test.dart
cfg/windows/: CMakeLists.txt
cfg/windows/runner/: Runner.rc  main.cpp
pacemkr/: .metadata  README.md  pubspec.yaml
pacemkr/lib/: diff_painter.dart  main.dart  ws2.dart
pacemkr/linux/: CMakeLists.txt
pacemkr/linux/runner/: my_application.cc
pacemkr/test/: widget_test.dart
pacemkr/web/: index.html  manifest.json
plugin/: CMakeLists.txt  CMakePresets.json  buildspec.json
plugin/src/: CabinetScoreOutput.cpp  CabinetScoreOutput.hpp  FrameProcessor.cpp  FrameProcessor.hpp  GameStatus.cpp  GameStatus.hpp  Vision.cpp  Vision.hpp  plugin-main.cpp
plugin/src/core/: PresetLoader.cpp  PresetLoader.hpp  definition.hpp  template.cpp  template.hpp
presets/sdvx-nb-friend-1v1/: preset.json
trackr1/: pubspec.yaml  track-1783319228876.csv  track-1783319238336.csv  track-1783319645494.csv  track-1783356982739.csv  track-1783357704134.csv  track-1783358414781.csv  track-1783444319796.csv
trackr1/test/: trackr1_test.dart
